<resources>
    <string name="app_name">Assignment 2</string>
    <string name="textView_color_selection">Color Selection</string>
    <string name="textView_color_hex">Color HEX:</string>
    <string name="textView_color_rgb">Color RGB:</string>
    <string name="textView_red">Red:</string>
    <string name="textView_green">Green:</string>
    <string name="textView_blue">Blue:</string>
    <string name="buttonWhite">White</string>
    <string name="buttonBlack">Black</string>
    <string name="buttonBlue">Blue</string>
    <string name="buttonReset">Reset</string>
    <string name="rgb_format">(%1$d, %2$d, %3$d)</string>
</resources>