<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textView_color_selection"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewColor"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="12dp"
        android:background="#408000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/textView_color_hex"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewColor" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/textView_color_rgb"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.381"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textViewHex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="#408000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewRgb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="(64, 128, 0)"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textView_red"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textView_green"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textView_blue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textViewRedSlider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="64"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/seekBarRed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seekBarRed"
        tools:text="64" />

    <TextView
        android:id="@+id/textViewBlueSlider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewGreenSlider"
        app:layout_constraintTop_toBottomOf="@+id/textViewGreenSlider"
        tools:text="0" />

    <TextView
        android:id="@+id/textViewGreenSlider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="128"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewRedSlider"
        app:layout_constraintTop_toBottomOf="@+id/textViewRedSlider"
        tools:text="128" />

    <SeekBar
        android:id="@+id/seekBarRed"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginEnd="28dp"
        android:max="255"
        android:progress="64"
        android:progressTint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toStartOf="@+id/textViewRedSlider"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/seekBarGreen"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <SeekBar
        android:id="@+id/seekBarGreen"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="28dp"
        android:max="255"
        android:progress="128"
        android:progressTint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toStartOf="@+id/textViewGreenSlider"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <SeekBar
        android:id="@+id/seekBarBlue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:max="255"
        android:progress="0"
        android:progressTint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toStartOf="@+id/textViewBlueSlider"
        app:layout_constraintStart_toStartOf="@+id/seekBarGreen"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <Button
        android:id="@+id/buttonWhite"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:backgroundTint="#CACACA"
        android:text="@string/buttonWhite"
        android:textColor="#020202"
        app:cornerRadius="5sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonBlack" />

    <Button
        android:id="@+id/buttonBlack"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#CACACA"
        android:text="@string/buttonBlack"
        android:textColor="#020202"
        app:cornerRadius="5sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonBlue"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toEndOf="@+id/buttonWhite"
        app:layout_constraintTop_toBottomOf="@+id/seekBarBlue" />

    <Button
        android:id="@+id/buttonBlue"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#CACACA"
        android:text="@string/buttonBlue"
        android:textColor="#020202"
        app:cornerRadius="5sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonBlack"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#CACACA"
        android:text="@string/buttonReset"
        android:textColor="#040303"
        app:cornerRadius="5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBlack" />

</androidx.constraintlayout.widget.ConstraintLayout>